Fixed Karate test and build success